dependencies cleanup and fixes